--- a/graylog2/templates/default/mongoid.yml.erb
+++ b/graylog2/templates/default/mongoid.yml.erb
@@ -1,7 +1,8 @@
 production:
-  host: <%= node.graylog2.mongodb.host %>
-  database: <%= node.graylog2.mongodb.database %>
-<% if node.graylog2.mongodb.auth == "true" -%>
-  username: <%= node.graylog2.mongodb.user %>
-  password: <%= node.graylog2.mongodb.password %>
+  host: <%= @mongodb_host %>
+  database: <%= @mongodb_database %>
+  port: <%= @mongodb_port %>
+<% if @mongodb_auth == "true" -%>
+  username: <%= @mongodb_user %>
+  password: <%= @mongodb_password %>
 <% end -%>
